# luxonis_task

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/: scrapy.cfg
backend/src/luxonis_task/api/: __init__.py  base.py
backend/src/luxonis_task/app/: __init__.py  repositories.py  services.py
backend/src/luxonis_task/scrp/: base.py  pipelines.py
backend/src/luxonis_task/scrp/spiders/: __init__.py  sreality.py
frontend/: Dockerfile  bun.lockb  env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.vue
frontend/src/components/: AdvertGrid.vue
src/luxonis_task/: __init__.py  __main__.py
src/luxonis_task/api/: __main__.py  base.py  endpoints.py
src/luxonis_task/app/: __init__.py  containers.py  database.py  entities.py  models.py  repositories.py  services.py
src/luxonis_task/scrp/: __init__.py  __main__.py  base.py  items.py  pipelines.py  settings.py
src/luxonis_task/scrp/spiders/: sreality.py
