[project]
name = "luxonis-task"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Martin Zaťko", email = "zatko.m@pm.me"},
]
dependencies = [
    "scrapy>=2.11.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
